    decimal support) (Keyur Govande)

- ODBC:
  . Fixed bug #68087 (ODBC not correctly reading DATE column when preceded by
    a VARCHAR column) (Keyur Govande)

- SPL:
  . Fixed bug #68128 (Regression in RecursiveRegexIterator) (Tjerk)

- CURL:
  . Add CURL_SSLVERSION_TLSv1_0, CURL_SSLVERSION_TLSv1_1, and 
    CURL_SSLVERSION_TLSv1_2 constants if supported by libcurl (Rasmus)

16 Oct 2014, PHP 5.6.2

- Core:
  . Fixed bug #68044 (Integer overflow in unserialize() (32-bits only)).
    (CVE-2014-3669) (Stas)

- cURL:
  . Fixed bug #68089 (NULL byte injection - cURL lib). (Stas)

- EXIF:
  . Fixed bug #68113 (Heap corruption in exif_thumbnail()). (CVE-2014-3670)
    (Stas)

- XMLRPC:
  . Fixed bug #68027 (Global buffer overflow in mkgmtime() function).
    (CVE-2014-3668) (Stas)

02 Oct 2014, PHP 5.6.1

- Core:
  . Implemented FR #38409 (parse_ini_file() looses the type of booleans). (Tjerk)
  . Fixed bug #65463 (SIGSEGV during zend_shutdown()). (Keyur Govande)
  . Fixed bug #66036 (Crash on SIGTERM in apache process). (Keyur Govande)
  . Fixed bug #67878 (program_prefix not honoured in man pages). (Remi)
  . Fixed bug #67938 (Segfault when extending interface method with variadic).
    (Nikita)
  . Fixed bug #67985 (Incorrect last used array index copied to new array after
    unset). (Tjerk)
  . Fixed bug #68088 (New Posthandler Potential Illegal efree() vulnerability).
    (Mike) (CVE-2014-3622)

- DOM:
  . Made DOMNode::textContent writeable. (Tjerk)

- Fileinfo:
  . Fixed bug #67731 (finfo::file() returns invalid mime type
    for binary files). (Anatol)

- GD:
  . Made fontFetch's path parser thread-safe. (Sara)

- GMP:
  . Fixed bug #67917 (Using GMP objects with overloaded operators can cause
    memory exhaustion). (Nikita)
  . Fixed bug #50175 (gmp_init() results 0 on given base and number starting
    with 0x or 0b). (Nikita)
  . Implemented gmp_import() and gmp_export(). (Leigh, Nikita)

- MySQLi: